--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore builds
 dist/
 bin/
+.vscode/
 .push-wcr*
 .container-wcr*
 
@@ -47,4 +48,3 @@ test/e2e/manifests/e2e-mysql-operator-controller.yaml
 # Goland 
 .idea
 *.iml
-.vscode
