--- a/examples/all.yaml
+++ b/examples/all.yaml
@@ -8,8 +8,8 @@ spec:
   scope: Namespaced
   names:
     kind: MySQLCluster
-    singular: mysqlcluster
-    plural: mysqlclusters
+    singular: mysql5cluster
+    plural: mysql5clusters
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -21,8 +21,8 @@ spec:
   scope: Namespaced
   names:
     kind: MySQLBackup
-    singular: mysqlbackup
-    plural: mysqlbackups
+    singular: mysql5backup
+    plural: mysql5backups
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -34,8 +34,8 @@ spec:
   scope: Namespaced
   names:
     kind: MySQLRestore
-    singular: mysqlrestore
-    plural: mysqlrestores
+    singular: mysql5restore
+    plural: mysql5restores
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -47,8 +47,8 @@ spec:
   scope: Namespaced
   names:
     kind: MySQLBackupSchedule
-    singular: mysqlbackupschedule
-    plural: mysqlbackupschedules
+    singular: mysql5backupschedule
+    plural: mysql5backupschedules
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -111,11 +111,11 @@ rules:
 
   - apiGroups: ["mysql.oracle.com"]
     resources:
-    - mysqlbackups
-    - mysqlbackupschedules
-    - mysqlclusters
-    - mysqlclusters/finalizers
-    - mysqlrestores
+    - mysql5backups
+    - mysql5backupschedules
+    - mysql5clusters
+    - mysql5clusters/finalizers
+    - mysql5restores
     verbs:
     - get
     - list
@@ -124,7 +124,7 @@ rules:
     - watch
 
   - apiGroups: ["mysql.oracle.com"]
-    resources: ["mysqlbackups"]
+    resources: ["mysql5backups"]
     verbs: ["create"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -154,11 +154,11 @@ rules:
 
   - apiGroups: ["mysql.oracle.com"]
     resources:
-    - mysqlbackups
-    - mysqlbackupschedules
-    - mysqlclusters
-    - mysqlclusters/finalizers
-    - mysqlrestores
+    - mysql5backups
+    - mysql5backupschedules
+    - mysql5clusters
+    - mysql5clusters/finalizers
+    - mysql5restores
     verbs:
     - get
     - list
